refactor: method from SimpleTableView